mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj is loaded)
Auto Toggles (loot, gold, split, sac, assist, map, door, key)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
[May 24 2009] - Jamdog
  Bug-Fix: sedit, copy shop option was causing a crash (Thanks slicer)
[May 21 2009] - Jamdog
  Added autoassist, autoloot, autogold, autosplit, autosacrifice and automap commands.
  Added autodoor toggle and command (autofind next door when opening/closing/unlocking/picking)
  Added autokey toggle and command (autounlock door when opening, if holding the key)
  Added prefedit OLC for players to set their toggles and preferences
  Re-arranged IS_PLAYING define to make it more efficient
[May 15 2009] - Jamdog
  Fixed variable definition halfway through do_oasis_zedit to allow compilation in MSVC. (thanks Lyceq)
  Crash-Bug-Fix: Added check for attacker and victim in the hit function (thanks Lyceq)
[May 13 2009] - Jamdog
  Bug-Fix: quest join check for previous quest completion, and validation checks for prev and next quests in qedit. (thanks drefs)
[Apr 13 2009] - Jamdog
  Bug-Fix: Shopping for multiple items caused an occasional crash due to NULL variable - now fixed (I hope)
[Apr 12 2009] - Jamdog
  Bug-Fix: Stat player displayed current quest information incorrectly - fixed 'if'
[Apr 11 2009] - Jamdog
  Bug-Fix: NPC check added to do_gen_ps function (thanks drefs)
  Bug-Fix: Fixed crash bug in remove_player where index entry is removed too early (thanks drefs)
  Bug-Fix: Commands and Socials list correctly when switched into a mob (thanks Rumble)
[Apr 06 2009] - Jamdog
  Bug-Fix: Changing a player name no longer allows two words (thanks Slicer)
[Apr 05 2009] - Jamdog
  Bug-Fix: Now frees memory used by qedit and hedit when closing a socket (Thanks Xiuhtecuhtli)
tbaMUD 3.59