@@ -1872,10 +1872,6 @@ ACMD(do_toggle)
     {"afk", PRF_AFK, 0,
     "AFK is now Off.\r\n",
     "AFK is now On.\r\n"},
-    {"color", 0, 0, "\n", "\n"},
-    {"syslog", 0, LVL_IMMORT, "\n", "\n"},
-    {"wimpy", 0, 0, "\n", "\n"},
-    {"pagelength", 0, 0, "\n", "\n"},
     {"autoloot", PRF_AUTOLOOT, 0,
     "Autoloot disabled.\r\n",
     "Autoloot enabled.\r\n"},
@@ -1901,6 +1897,11 @@ ACMD(do_toggle)
     {"autodoor", PRF_AUTODOOR, 0,
     "You will now need to specify a door direction when opening, closing and unlocking.\r\n",
     "You will now find the next available door when opening, closing or unlocking.\r\n"},
+    {"color", 0, 0, "\n", "\n"},
+    {"syslog", 0, LVL_IMMORT, "\n", "\n"},
+    {"wimpy", 0, 0, "\n", "\n"},
+    {"pagelength", 0, 0, "\n", "\n"},
+    {"screenwidth", 0, 0, "\n", "\n"},
     {"\n", 0, -1, "\n", "\n"} /* must be last */
   };
 
